--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
     <meta name="apple-mobile-web-app-title" content="Basement" />
 
     <!-- iOS App Icons -->
-    <link rel="apple-touch-icon" href="/icons/icon-180.svg" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-152.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180.svg" />
-    <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-167.svg" />
+    <link rel="apple-touch-icon" href="/icons/icon-180.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180.png" />
+    <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-167.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192.svg" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/icons/icon-512.svg" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/icons/icon-512.png" />
+
     <!-- Theme Color -->
     <meta name="theme-color" content="#1976d2" />
   </head>
